sonarqube-deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarqube-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: ingress-nginx.com
      http:
        paths:
          - path: /sonarqube
            pathType: Prefix
            backend:
              service:
                name: sonarqube-sonarqube-lts
                port:
                  number: 9000
